@@ -1,1 +1,1 @@
-.wp-block-media-text{--wp--custom--gutter:1rem;display:grid;grid-template-columns:50% 1fr;grid-template-rows:auto}.wp-block-media-text:not(.has-background){gap:var(--wp--custom--gutter)}.wp-block-media-text.has-media-on-the-right{grid-template-columns:1fr 50%}.wp-block-media-text.has-background .wp-block-media-text__content{padding:var(--wp--custom--gutter)}.wp-block-media-text__media{margin:0}.wp-block-media-text__media img,.wp-block-media-text__media video{display:block;width:100%;object-fit:cover}.wp-block-media-text__media .wp-block-media-text__placeholder{object-fit:initial;min-height:250px}.is-image-fill .wp-block-media-text__media{position:relative;padding:0;min-height:250px;background-size:cover;background-position:center}.is-image-fill .wp-block-media-text__media img{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}@media (min-width:768px){.wp-block-media-text{--wp--custom--gutter:2rem}.wp-block-media-text.has-media-on-the-right .wp-block-media-text__media{grid-column:2}.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{grid-column:1}.wp-block-media-text.is-vertically-aligned-top .wp-block-media-text__content{align-self:flex-start}.wp-block-media-text.is-vertically-aligned-center .wp-block-media-text__content{align-self:center}.wp-block-media-text.is-vertically-aligned-bottom .wp-block-media-text__content{align-self:flex-end}.wp-block-media-text__media{grid-column:1;grid-row:1}.wp-block-media-text__content{grid-column:2;grid-row:1;align-self:center}}@media (max-width:767.98px){.wp-block-media-text.is-stacked-on-mobile{grid-template-columns:100%}.wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__media{grid-column:1;grid-row:1}.wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__content{grid-column:1;grid-row:2}}
+.wp-block-media-text{--wp--custom--gutter:1rem;display:grid;grid-template-columns:50% 1fr;grid-template-rows:auto}.wp-block-media-text:not(.has-background){gap:var(--wp--custom--gutter)}.wp-block-media-text.has-media-on-the-right{grid-template-columns:1fr 50%}.wp-block-media-text.has-background .wp-block-media-text__content{padding:var(--wp--custom--gutter)}.wp-block-media-text__media{margin:0}.wp-block-media-text__media img,.wp-block-media-text__media video{display:block;width:100%;object-fit:cover}.wp-block-media-text__media .wp-block-media-text__placeholder{object-fit:initial;min-height:250px}.is-image-fill .wp-block-media-text__media{position:relative;padding:0;min-height:250px;background-size:cover;background-position:center}.is-image-fill .wp-block-media-text__media img{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}@media (min-width:768px){.wp-block-media-text{--wp--custom--gutter:2rem}.wp-block-media-text.has-media-on-the-right .wp-block-media-text__media{grid-column:2}.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{grid-column:1}.wp-block-media-text.is-vertically-aligned-top .wp-block-media-text__content{align-self:flex-start}.wp-block-media-text.is-vertically-aligned-center .wp-block-media-text__content{align-self:center}.wp-block-media-text.is-vertically-aligned-bottom .wp-block-media-text__content{align-self:flex-end}.wp-block-media-text__media{grid-column:1;grid-row:1}.wp-block-media-text__content{grid-column:2;grid-row:1;align-self:center}}@media (max-width:767.98px){.wp-block-media-text.is-stacked-on-mobile{grid-template-columns:100%!important}.wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__media{grid-column:1;grid-row:1}.wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__content{grid-column:1;grid-row:2}}
