@@ -1,1 +1,1 @@
-.wp-block-social-links{padding-left:0;padding-right:0;text-indent:0;margin-left:0;background:none}.wp-block-social-links.aligncenter{display:flex;justify-content:center}.wp-block-social-links.has-visible-labels a{padding:.5em 1em;flex-direction:row}.wp-block-social-links.has-visible-labels svg{margin-right:.5em}.wp-block-social-links.is-style-pill-shape .wp-social-link{width:auto}.wp-block-social-links.is-style-pill-shape .wp-social-link a{padding-left:calc((2.5/3) * 1em);padding-right:calc((2.5/3) * 1em)}.wp-block-social-links.is-style-square-shape .wp-social-link a{border-radius:0}.wp-block-social-links.is-style-logos-only .wp-social-link a{background:none;padding:0}.wp-social-link{display:block;background-color:transparent}.wp-social-link a{display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;border-radius:9999px;transition:all 0.1s ease;padding:.35em;line-height:1;text-decoration:none;border:none;box-shadow:none}.wp-social-link svg{width:1em;height:1em;fill:currentColor}
+.wp-block-social-links{padding-left:0;padding-right:0;text-indent:0;margin-left:0;background:none}.wp-block-social-links.aligncenter{display:flex;justify-content:center}.wp-block-social-links.has-visible-labels .wp-block-social-link-anchor{padding:.5em 1em;flex-direction:row}.wp-block-social-links.has-visible-labels svg{margin-right:.5em}.wp-block-social-links.is-style-pill-shape .wp-block-social-link{width:auto}.wp-block-social-links.is-style-pill-shape .wp-block-social-link-anchor{padding-left:calc((2.5/3) * 1em);padding-right:calc((2.5/3) * 1em)}.wp-block-social-links.is-style-square-shape .wp-block-social-link{border-radius:0}.wp-block-social-links.is-style-logos-only .wp-block-social-link{background:none}.wp-block-social-links.is-style-logos-only .wp-block-social-link-anchor{padding:0}.wp-block-social-link{display:block;background-color:transparent;border-radius:9999px}.wp-block-social-link-anchor{display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;transition:all 0.1s ease;padding:.35em;line-height:1;text-decoration:none;color:inherit;border:none;border-radius:inherit;box-shadow:none}.wp-block-social-link-anchor:is(:hover,:active,:visited){color:inherit}.wp-block-social-link-anchor svg{width:1em;height:1em}
