@@ -11,6 +11,8 @@ v6.1.2
 - Updated - transients consistent naming
 - Updated - all WooCommerce related code moved to external extension
 - Updated - Group: Marquee refactored to use only 1 group container / added support for vertical sliding, reverse, pause, alternate
+- Updated - core/social-links styles (class naming, selectors and css specificity updates)
+- Removed - heading/paragraphs spacing
 - Fixed - PHP notices with inc/config/config.php
 - Fixed - wide align on Media & Text pattern (left image alignment)
 - Fixed - offcanvas container background inside core/navigation block
